Revert "trying to fix content jumping on mobile"
This reverts commit 48e752b1c2e45f6da947e0835241d73f55680f6b.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -369,6 +369,7 @@ and (max-width: 450px) {
     /* Header */
     header {
         height: 740px;
+        position: relative;
         padding: 0;
     }
     .showcase {
@@ -473,25 +474,6 @@ and (max-width: 450px) {
         border-right: 4px solid rgb(238, 202, 0);
         border-left: 4px solid rgb(238, 202, 0);
         border-radius: 4px;
-    }
-}
-
-@media only screen 
-and (max-height: 667px){
-    header {
-        height: 667px;
-        position: relative;
-        padding: 0;
-    }
-    .showcase {
-        position: absolute;
-        top: 50%;
-        font-size: 24px;
-        padding: 0;
-    }
-    .container-b {
-        margin-top: 150px;
-        padding: 0; 
     }
 }
 
